@@ -240,10 +240,10 @@ class UtilTestCase(unittest.TestCase):
         if hasattr(types, 'UnicodeType'):
             exec "assert not is_List(u'')"
 
-    def test_argmunge(self):
-        assert argmunge("foo bar") == ["foo", "bar"]
-        assert argmunge(["foo", "bar"]) == ["foo", "bar"]
-        assert argmunge("foo") == ["foo"]
+    def test_Split(self):
+        assert Split("foo bar") == ["foo", "bar"]
+        assert Split(["foo", "bar"]) == ["foo", "bar"]
+        assert Split("foo") == ["foo"]
 
     def test_is_String(self):
         assert is_String("")
